Revision history for Perl extension Statistics::R.

x.xx 
    - Automatically call start() when creating a Statistics::R object with new()
    - More illustrative synopsis
    - More tests: start/stop
    - Aliased a few functions for consistency:
         startR -> start, stopR -> stop, restartR -> restart, Rbin -> bin,
         start_sharedR -> start_shared, read -> receive
    - Replaced the error() method by a dummy. Errors are now fatal are die() right away
    - Added a load test
    - Added a run() method that replaces send() and read() and checks for errors (RT #70361)
    - Removed the undocumented R() method
    - POD work
    - Version number in sync between Statistics::R and Statistics::R::Bridge
    - More portable filenames (RT #70391)
    - Typo fixes
    - Improved readme generation in Makefile.PL
    - Git and bug tracker URL information

0.08  2011-03-01
    - Pass options in new() to Statistics::R::Bridge constructor (RT #63906)

0.07  2010-11-08
    - Tidy up SYNOPSIS (RT #62776)
    - Fix undef warning on Win32 (RT #62776)
    - Fix is_started() method (RT #62776)

0.06  2010-09-17
    - Fix error() when used as an accessor (RT #61335)
    - Silence DESTROY() when R is not found
    - Fix "uninitialized value" warning in read_processR() (RT #61414)

0.05  2010-09-13
    - Major code refactor:
      - strict + warnings wherever possible
      - Removed some layers of abstraction
      - Win32/Linux classes are now simple subs
      - Basic syntax tidying
      - POD fix, plus pod test
    - Skip tests if R is not available

0.04  2010-08-28
    - Basic code cleanup with the intention of doing major refactoring by-and-by
    - Fix the test suite

0.03  2008-08-16
    - Fixed RT Bug #23948: bug in Statistics::R 
    - Fixed --gui
      - RT Bug #17925: R --slave --vanilla --gui=none is now R --slave --vanilla --gui=X11
      - RT Bug #20515: Fwd: Delivery Status Notification (Failure)
      - RT Bug #14324: error message with recent versions of R